@startuml ClassDiagram

' ── Backend ─────────────────────────────────────────────
package backend {

    class Server {
        - {static} broadcastGroups : HashMap<String, ArrayList<ClientHandler>>
        - {static} PORT : int
        - {static} DEFAULTGROUP : String
        - {static} groupManager : GroupManager
        + {static} broadcast(message : String, group : String) : void
        + {static} disconnectClient(client : ClientHandler) : void
        + {static} leaveGroup(group : String, client : ClientHandler) : void
        + {static} getGroupUsernames(group : String) : List<String>
        + {static} ensureGroupAndAddClient(group : String, client : ClientHandler) : void
        + {static} main(args : String[]) : void
    }

    class ClientHandler {
        - socket : Socket
        - reader : BufferedReader
        - sender : PrintWriter
        - encrypter : Encrypter
        - messageHelper : MessageHelper
        - groups : ArrayList<String>
        - username : String
        + ClientHandler(client : Socket)
        + run() : void
        + sendMessage(messageString : String) : void
        + getGroups() : ArrayList<String>
        + getUsername() : String
        + addGroup(group : String) : void
        + removeGroup(group : String) : void
    }
}

' ── Client ───────────────────────────────────────────────
package client {

    class App {
        + {static} main(args : String[]) : void
    }

    class Client {
        - {static} serverIP : String
        - {static} serverPort : int
        - {static} sender : Sender
        - {static} receiver : Receiver
        - {static} socket : Socket
        - {static} loginHandler : LoginHandler
        - {static} connectionChecker : ConnectionChecker
        - {static} user : String
        - {static} encrypter : Encrypter
        - {static} login(username : String, password : String) : boolean
        + {static} register(username : String, password : String) : void
        + {static} connect(username : String, password : String, gui : GUI) : void
        + {static} send(message : Message) : void
        + {static} send(messageString : String, group : String) : void
        + {static} leaveGroup(group : String) : void
        + {static} sendInvite(invitedUser : String, group : String) : void
        + {static} enterGroup(group : String) : void
        + {static} disconnect() : void
    }

    class GUI {
        - cardLayout : CardLayout
        - cardPanel : JPanel
        - usernameField : JTextField
        - passwordField : JPasswordField
        - loginStatusLabel : JLabel
        - chatArea : JTextPane
        - messageField : JTextField
        - pendingAttachments : List<Attachment>
        - attachmentStatusLabel : JLabel
        - notificationPanel : JPanel
        - groupManager : GroupManager
        - chatListPanel : JPanel
        - chatButtons : HashMap<String, JButton>
        - userListModel : DefaultListModel<String>
        - currentChat : String
        - connectionIndicator : JLabel
        + GUI()
        + GUI(username : String)
        + showChatMessage(message : Message) : void
        + showLoginError(message : String) : void
        + showLoginSuccess(message : String) : void
        + clearExceptions() : void
        - buildLoginPanel() : JPanel
        - buildChatPanel() : JPanel
        - handleLogin() : void
        - handleRegister() : void
        - handleSend() : void
        - handleLogout() : void
        - handleSaveHistory() : void
        - handleAttachFile() : void
        - appendToChat(text : String) : void
        - appendImageToChat(data : byte[]) : void
        - loadEmojis() : void
        - getEmojiIcon(name : String, targetHeight : int) : ImageIcon
        - showChatScreen() : void
    }

    class LoginHandler {
        - usernamePattern : Pattern
        - passwordPattern : Pattern
        - credentialsFileName : String
        - {static} credentialHandler : CredentialHandler
        - {static} instance : LoginHandler
        + {static} getInstance() : LoginHandler
        ~ validateUsernameFormat(username : String) : boolean
        ~ validatePasswordFormat(password : String) : boolean
        ~ login(username : String, password : String) : boolean
        ~ register(username : String, password : String) : void
    }

    class CredentialHandler {
        - credentialsFile : File
        - writer : BufferedWriter
        - {static} instance : CredentialHandler
        - creds : HashMap<String, String>
        + {static} getInstance(filename : String) : CredentialHandler
        + hasCredentials() : boolean
        ~ register(username : String, password : String) : void
        ~ lookup(username : String) : String
        - loadCredentials() : void
    }

    class Encrypter {
        - secretKey : SecretKey
        - keyString : String
        + Encrypter()
        + encryptMessage(message : String) : String
        + decryptMessage(encryptedMessage : String) : String
    }

    class Sender {
        - socket : Socket
        - messageHelper : MessageHelper
        - sender : PrintWriter
        - encrypter : Encrypter
        + Sender(socket : Socket, encrypter : Encrypter)
        + send(message : Message) : void
        + enter(username : String) : void
        + enter(username : String, group : String) : void
        + leave(group : String, username : String) : void
        + invite(invitedUser : String, group : String, inviter : String) : void
    }

    class Receiver {
        ~ receiver : BufferedReader
        ~ socket : Socket
        ~ encryptedMessage : String
        ~ messageHelper : MessageHelper
        ~ encrypter : Encrypter
        ~ gui : GUI
        + Receiver(socket : Socket, encrypter : Encrypter, gui : GUI)
        + run() : void
    }

    class Message {
        - content : String
        - timeStamp : LocalDateTime
        - userName : String
        - group : String
        - attachments : List<Attachment>
        + Message(content : String, userName : String, group : String)
        + Message(content : String, timeStamp : LocalDateTime, userName : String, group : String)
        + getContent() : String
        + setContent(content : String) : void
        + getTimeStamp() : LocalDateTime
        + setTimeStamp(timeStamp : LocalDateTime) : void
        + getUserName() : String
        + setUserName(userName : String) : void
        + getGroup() : String
        + setGroup(group : String) : void
        + addAttachment(att : Attachment) : void
        + getAttachments() : List<Attachment>
        + hasAttachments() : boolean
    }

    class AESHelper {
        - secretKey : SecretKey
        + setKey(key : SecretKey) : void
        + encrypt(data : String) : String
        + decrypt(encryptedData : String) : String
    }
}

' ── Utilities ────────────────────────────────────────────
package Utilities {

    class MessageHelper {
        ~ formatter : DateTimeFormatter
        + fromMessage(message : Message) : String
        + toMessage(messageString : String) : Message
    }

    class GroupManager {
        + addGroup(group : String) : void
        + addUser(group : String, user : String) : void
        + removeUser(group : String, user : String) : void
        + hasGroup(group : String) : boolean
        + ensureGroup(group : String) : void
        + removeGroup(group : String) : void
        + getGroupMembers(group : String) : ArrayList<String>
        + getGroupMessages(group : String) : ArrayList<Message>
        + addMessage(group : String, message : Message) : void
    }

    class InvalidLoginException {
        + InvalidLoginException(message : String)
    }

    class RegistrationException {
        + RegistrationException(message : String)
    }
}

' ── Relationships ─────────────────────────────────────────

' Entry point
App ..> GUI : creates

' GUI ↔ Client
GUI ..> Client : calls connect() / send() / disconnect() / register() / enterGroup()

' Client orchestrates the session
Client --> LoginHandler      : uses (singleton)
Client --> Encrypter         : creates
Client --> Sender            : creates & starts
Client --> Receiver          : creates & starts (Observer)
Client ..> Message           : creates

' Authentication chain
LoginHandler --> CredentialHandler : delegates file I/O (singleton)
LoginHandler ..> InvalidLoginException  : throws
LoginHandler ..> RegistrationException  : throws
CredentialHandler ..> RegistrationException : throws

' Send path
GUI -> Client : send(Message)
Client -> Sender : send(Message)
Sender --> MessageHelper : fromMessage()
Sender --> Encrypter : encryptMessage()

' Receive path
Receiver --> Encrypter     : decryptMessage()
Receiver --> MessageHelper : toMessage()
Receiver --> GUI           : showChatMessage()
Receiver ..> Message       : produces

' Encryption internals
Encrypter ..> AESHelper : creates & uses

' Server ↔ ClientHandler
Server "1" *-- "0..*" ClientHandler : spawns / manages
ClientHandler ..> Server : broadcast(encryptedString, group) / disconnectClient()

@enduml
